# nih-plug

./: Cargo.toml  README.md
nih_plug_egui/: Cargo.toml
nih_plug_egui/src/: editor.rs  resizable_window.rs
nih_plug_egui/src/widgets/: param_slider.rs
plugins/examples/byo_gui_wgpu/src/: lib.rs
plugins/examples/gain_gui_egui/src/: lib.rs
src/: event_loop.rs  lib.rs  midi.rs  plugin.rs
src/buffer/: blocks.rs  samples.rs
src/event_loop/: macos.rs
src/wrapper/: standalone.rs
src/wrapper/clap/: context.rs  util.rs  wrapper.rs
