[package]
name = "nih_plug_egui"
version = "0.0.0"
edition = "2021"
authors = ["Robbert van der Helm <mail@robbertvanderhelm.nl>"]
license = "ISC"

description = "An adapter to use egui GUIs with NIH-plug"

[features]
default = ["opengl", "default_fonts"]
# `nih_plug_egui` always uses OpenGL since egui's wgpu backend is still unstable
# depending on the platform
opengl = ["baseview/opengl", "egui-baseview/opengl"]
default_fonts = ["egui-baseview/default_fonts"]
rayon = ["egui-baseview/rayon"]

[dependencies]
nih_plug = { path = "..", default-features = false }
raw-window-handle = "0.5"
baseview = { git = "https://github.com/RustAudio/baseview.git", version = "0.1.4" }
crossbeam = "0.8"
egui-baseview = { git = "https://github.com/valsteen/egui-baseview.git", branch = "egui-0.34-nih-plug-baseview" }
parking_lot = "0.12"
# To make the state persistable
serde = { version = "1.0", features = ["derive"] }
